--- a/00-E1-CS1B-FIA-September-2020/E1-Exercise1.Rmd
+++ b/00-E1-CS1B-FIA-September-2020/E1-Exercise1.Rmd
@@ -104,7 +104,8 @@ gram portion would be rejected at the 5% level.
 t.test(amounts,conf.level=0.80) 
 
 ```
-From output:
+
+* From output:
 80 percent confidence interval: (1.836, 1.954) 
 
 #### Conclusion
