--- a/00-E1-CS1B-FIA-September-2020/E1-Exercise4.Rmd
+++ b/00-E1-CS1B-FIA-September-2020/E1-Exercise4.Rmd
@@ -1,6 +1,44 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
 
-\large 
-\noindent
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 3 - Hypothesis Testing with ***t.test()***
+
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
+
+
+```{r}
+load("smoking_data.rdata")
+```
 
 4 Data were collected on average alcohol and cigarette consumption per adult per year
 for a number of countries. The data are given in the file smoking_data.RData
